# k4MarlinWrapper

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/: ISSUE_TEMPLATE  PULL_REQUEST_TEMPLATE
.github/scripts/: clang_format_check.sh  compile_and_test.sh  copy_contents.sh  gmp_build_and_test.sh  k4MarlinWrapper_build_and_test.sh  set_environment.sh
.github/workflows/: clang-format-check.yml  doctest.yaml  downstream-build.yaml  pre-commit.yaml  test.yml
GMPWrapper/: CMakeLists.txt
GMPWrapper/GMPWrapper/: LCEventWrapper.h  LcioEventAlgo.h  MarlinProcessorWrapper.h
GMPWrapper/examples/: runit.py
GMPWrapper/python/GMPWrapper/: parseConstants.py
GMPWrapper/scripts/: convertMarlinSteeringToGaudi.py  parseConstants.py
GMPWrapper/src/components/: LcioEventAlgo.cpp  MarlinProcessorWrapper.cpp
GMPWrapper/src/util/: gmpUtil.h
cmake/: Key4hepConfig.cmake  compiler_output.cmake  gaudi_binary_tag.cmake  gmprun.in
doc/: MarlinWrapperIntroduction.md  ReleaseNotes.md  edmConverters.md  howtoMultithread.md  randomNumberGeneration.md
doc/starterkit/k4MarlinWrapperCLIC/: CEDViaWrapper.md  Readme.md  edmConverters.md  howtoMultithread.md
k4MarlinWrapper/: CMakeLists.txt
k4MarlinWrapper/examples/: clicRec_e4h_input.py  event_display.py  import_edm4hep.py  runit.py
k4MarlinWrapper/k4MarlinWrapper/: EDMCollectionWrapper.h  LCEventWrapper.h  LcioEventAlgo.h  LcioEventOutput.h  MarlinProcessorWrapper.h  TrackingCellIDEncodingSvc.h
k4MarlinWrapper/k4MarlinWrapper/converters/: EDM4hep2Lcio.h  IEDM4hep2Lcio.h  IEDMConverter.h  Ik4LCIOReaderWrapper.h  LCIO2EDM4hep.h  Lcio2EDM4hep.h  k4LCIOReaderWrapper.h
k4MarlinWrapper/k4MarlinWrapper/util/: EDM4hep2LcioUtils.h  k4MarlinWrapperUtil.h
k4MarlinWrapper/python/k4MarlinWrapper/: inputReader.py  io_helpers.py  parseConstants.py
k4MarlinWrapper/scripts/: convertMarlinSteeringToGaudi.py
k4MarlinWrapper/src/components/: CellIDEncodingFiller.cpp  ConverterObjectMap.h  EDM4hep2Lcio.cpp  GlobalConvertedObjectsMap.h  LCIO2EDM4hep.cpp  Lcio2EDM4hep.cpp  LcioEventAlgo.cpp  LcioEventOutput.cpp  MarlinProcessorWrapper.cpp  StoreUtils.cpp  StoreUtils.h  TrackingCellIDEncodingSvc.cpp  k4LCIOReaderWrapper.cpp
runit/: runit.py
scripts/: convertMarlinSteeringToGaudi.py
test/: CMakeLists.txt  README.md
test/gaudi_opts/: all_events_bounds.py  clicRec_e4h_input.py  clicReconstruction_mt.py  converterConstants.py  createEventHeader.py  edm_converters.py  fccRec_e4h_input.py  geoTest_cld.py  lcio_event_only.py  over_total_events.py  same_num_io.py  simple_processors.py  simple_processors2.py  simple_processors3.py  testConverterConstants.py  test_edm4hep2lcio.py  test_edm_converters.py  test_global_converter_maps.py  test_global_converter_maps_functional.py  test_gmp1.py  test_gmp2.py  test_io_utilities.py  test_k4MarlinWrapper1.py  test_k4MarlinWrapper2.py  test_lcio2edm4hep.py  test_link_conversion_edm4hep.py  test_partial_conversion.py  test_without_header.slcio
test/inputFiles/: anajob_Output_DST.expected  anajob_Output_REC.expected  converterConstants.xml  podio-dump_my_output.expected  testConverterConstants.xml
test/input_files/: muons.slcio.md5  ttbar_20240223_edm4hep.root.md5
test/marlin_steering/: MarlinWithEmptyParameter.xml
test/python/: root_num_events.py
test/scripts/: all_events_bounds.sh  check_lcio_output_partial_conversion.sh  clicGeoTest.sh  clicRec.sh  clicRec_e4h_input.sh  clicRec_lcio_mt.sh  converter_constants.sh  edm_converters.sh  event_header.sh  global_converter_maps.sh  over_total_events.sh  same_num_io.sh  setup_clic_performance.sh  simple_processors.sh  simple_processors2.sh  skip_events.sh  test_clicReconstruction.sh  test_clicReconstruction_e4hinput.sh  test_converter_constants.sh  test_edm4hep2lcio_converter.sh  test_edm_converters.sh  test_gmp1.sh  test_gmp2.sh  test_k4MarlinWrapper1.sh  test_k4MarlinWrapper2.sh  test_lcio2edm4hepconverter.sh
test/src/: MCRecoLinkChecker.cc  MCRecoLinkChecker.h  MCRecoLinkCheckerFunctional.cc  MCRecoLinkCheckerFunctional.h  MarlinMCRecoLinkChecker.cc  PseudoRecoAlgorithm.cc  PseudoRecoAlgorithm.h  PseudoRecoProcessor.cc  PseudoRecoProcessor.h  TestE4H2L.cpp  TestE4H2L.h  TrivialMCRecoLinker.cc  TrivialMCTruthLinkerProcessor.cc  TrivialMCTruthLinkerProcessor.h  unit_tests.cpp
tests/: CMakeLists.txt
tests/gaudi_opts/: createEventHeader.py  global_converter_maps.root  global_converter_maps_iosvc.root  simple_processors.py  test_cellid_encoding_filler.py  test_global_converter_maps.py  test_link_conversion_edm4hep.py
tests/inputFiles/: anajob_Output_REC.expected  converterConstants.xml  podio-dump_my_output.expected  test
tests/input_files/: testSimulation.slcio.md5  ttbar_podio230830_edm4hep_frame.root.md5
tests/marlin_steering/: MarlinWithEmptyParameter.xml
tests/scripts/: convert_empty_parameters.sh
tests/src/: CellIDEncodingChecker.cc  MCRecoLinkCheckerFunctional.cc  PseudoRecoFunctional.cc  PseudoRecoProcessor.h  TrivialMCTruthLinkerProcessor.cc  TrivialMCTruthLinkerProcessor.h
